HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumRecordMissingField/Expected.uv
//! Expected diagnostic metadata for the EnumRecordMissingField rejected-source specimen.

expectedDiagnostic("E-TYP-2009", "Enum-Lit-Record-MissingField")
